--- a/OpenAiVCore/pom.xml
+++ b/OpenAiVCore/pom.xml
@@ -10,9 +10,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.azure.spring</groupId>
-            <artifactId>spring-cloud-azure-starter-openai</artifactId>
-            <version>4.9.0-beta.1</version>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-ai-openai</artifactId>
+            <version>1.0.0-beta.2</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
